--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TracuuHoso"></activity>
+        <activity android:name=".Diemcanhan"></activity>
+        <activity android:name=".Thongtincanhan" />
+        <activity android:name=".QlThongtincanhan" />
+        <activity android:name=".TracuuHoso" />
         <activity android:name=".ThongtinHocvu" />
         <activity android:name=".ThongbaoThanhtoan" />
         <activity android:name=".TtThanhtoan" />
