--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Diemcanhan"></activity>
+        <activity android:name=".DsachThisinh"></activity>
+        <activity android:name=".Danhsachsv" />
+        <activity android:name=".QuanlyDssv" />
+        <activity android:name=".Diemcanhan" />
         <activity android:name=".Thongtincanhan" />
         <activity android:name=".QlThongtincanhan" />
         <activity android:name=".TracuuHoso" />
         <activity android:name=".ThongtinHocvu" />
         <activity android:name=".ThongbaoThanhtoan" />
         <activity android:name=".TtThanhtoan" />
-        <activity android:name=".DangkyXetuyen" />
         <activity android:name=".DkXetTuyen" />
         <activity android:name=".ThanhToan" />
         <activity android:name=".DkHkPhu" />
